Key Changes: Decouple email notifications from VisitService to VisitController by making `VisitService` focused on core business logic and enabling more targeted testing of the notification flow at the controller level.
Refactor:
- Moved email notification orchestration from `VisitServiceImpl` to `VisitController`.
- Updated `NotificationService` interface and implementation to accept `VisitViewDTO` and `patientEmail` directly.
- Marked `NotificationServiceImpl.sendVisitConfirmation` as `@Async` for non-blocking execution.
- Adjusted `VisitServiceImplIntegrationTests` by removing the email-related test, as it's no longer `VisitService`'s responsibility.
- Introduced `VisitController` to handle the API endpoint and orchestrate email sending.
- Created `VisitControllerIntegrationTests` to verify the end-to-end email notification flow via the controller.